examples/illformed/undefined_function.zn
func main() {
    let result : i32 = multiply(4, 5); // Error: 'multiply' is undefined
    println(result);
}
